--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,15 @@ nav,
     cursor: pointer;
 }
 
+.aside-item:hover{
+    background-color: rgb(192, 190, 190);
+}
+
+.aside-item{
+    padding: 10px 0;
+}
+
+
 /* SCROLLBAR */
 
 .col2{
