--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,10 @@ nav,
     padding: 10px 0;
 }
 
+.offcanvas, .offcanvas-lg, .offcanvas-md, .offcanvas-sm, .offcanvas-xl, .offcanvas-xxl {
+    --bs-offcanvas-width: 1000px;
+}
+
 
 /* SCROLLBAR */
 
